k8s.deployment.template.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-app-${DRONE_BRANCH}
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web-app-${DRONE_BRANCH}
    spec:
      containers:
        - name: web-app-${DRONE_BRANCH}
          image: keeet/web-app:${DRONE_COMMIT_SHA}
      imagePullSecrets:
        - name: regcred
