k8s.service.template.yml
kind: Service
apiVersion: v1
metadata:
  name: web-app-${DRONE_BRANCH}
spec:
  selector:
    app: web-app-${DRONE_BRANCH}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
