k8s.staging-ingress.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keeet-app-canary-${DRONE_BRANCH}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-cookie: "${DRONE_BRANCH}"
    nginx.ingress.kubernetes.io/canary-weight: "0"
spec:
  tls:
    - hosts:
        - app.keeet.io
      secretName: app-keeet-io
  rules:
    - host: app.keeet.io
      http:
        paths:
          - backend:
              serviceName: web-app-${DRONE_BRANCH}
              servicePort: 80
